# Riemann

./: .gitignore  .readthedocs.yml  LICENSE  README.md  README_en.md  README_zh.md  pyproject.toml  temp_end.rst
docs/: Makefile  README.md  README_en.md  READTHEDOCS_SETUP.md  make.bat  requirements.txt
docs/source/: .readthedocs.yml  api_reference.rst  autograd_basics.rst  computer_vision.rst  conf.py  contributing.rst  einsum_chapter.rst  index.rst  introduction.rst  license.rst  linear_algebra.rst  neural_network_modules.rst  optimization_algorithms.rst  tensor_basics.rst
docs/source_zh/: .readthedocs.yaml  api_reference.rst  autograd_basics.rst  computer_vision.rst  conf.py  conf_zh.py  contributing.rst  einsum_chapter.rst  index.rst  introduction.rst  license.rst  linear_algebra.rst  neural_network_modules.rst  optimization_algorithms.rst  tensor_basics.rst
examples/: backward_demo.py  cnn_CIFAR10_CE_Adam.py  cnn_CIFAR10_CE_SGD.py  custom_grad_FunctionClass.py  custom_grad_decorator.py  grad_demo.py  gradient_clipping_demo.py  hessian.py  jacobian.py  kan_mnist.py  mnist_demo.py  nn_MNIST_CE_Adagrad.py  nn_MNIST_CE_Adam.py  nn_MNIST_CE_SGD.py  nn_MNIST_MSE_GD.py  nn_MNIST_MSE_LBFGS.py  nn_MNIST_MSE_SGD.py  nn_MNIST_MSE_backward.py  nn_lr_scheduler.py  optimizers_comparison.py  scatter.py  transformer_timeseq.py
src/riemann/: __init__.py  cuda.py  dtype.py  gradmode.py  linalg.py  optim.py  serialization.py  tensordef.py
src/riemann/autograd/: __init__.py  functional.py  grad.py
src/riemann/nn/: __init__.py  activation.py  conv.py  functional.py  init.py  kan.py  loss.py  module.py  transformer.py
src/riemann/optim/: __init__.py  lr_scheduler.py  optim.py
src/riemann/utils/: __init__.py  data.py
src/riemann/vision/: __init__.py  datasets.py  transforms.py
tests/: test_000_tensor_creation.py  test_001_operator.py  test_002_backward.py  test_003_stat_funcs.py  test_004_random.py  test_005_shape_operations.py  test_006_getitem_grad.py  test_007_inplace_oper.py  test_007_inplace_setitem.py  test_008_scatter_functions.py  test_009_matmul.py  test_010_grad.py  test_011_jacobian.py  test_012_hessian.py  test_013_jvp_vjp.py  test_014_vhp_hvp.py  test_015_multi_function_grad.py  test_016_grad_context.py  test_017_perf.py  test_018_gather.py  test_019_where.py  test_020_clamp.py  test_021_activation.py  test_022_onehot.py  test_023_loss_funcs.py  test_024_basic_funcs.py  test_025_stack_split.py  test_026_chk_tensor_val_funcs.py  test_027_diagonal.py  test_028_sort.py  test_029_serialization.py  test_030_conv_funcs.py  test_031_define_gradfunc.py  test_032_cuda.py  test_033_einsum.py  test_048_nn_hooks.py  test_049_nn_container.py  test_050_nn_module.py  test_051_nn_batchnorm.py  test_052_vision.py  (+21 more)
