[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riemann"
version = "0.3.0"
description = "A framework for tensor computation, automatic differentiation, and neural network development with PyTorch-compatible APIs."
readme = "README.md"
authors = [
    { name = "Fei Xiang" }
]
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["automatic differentiation", "deep learning", "gradient", "tensor", 
            "machine learning", "neural networks", "pytorch-compatible", 
            "scientific computing", "optimization"]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.20.0",
    "pillow>=8.0.0",
    "tqdm>=4.0.0"
]

[project.optional-dependencies]
# CUDA支持 - 提供不同CUDA版本的选项
# 注意：CuPy主要支持x86_64/AMD64架构的Linux和Windows平台
cuda13 = [
    "cupy-cuda13x; (platform_system=='Linux' or platform_system=='Windows') and (platform_machine=='x86_64' or platform_machine=='AMD64')",
]
cuda12 = [
    "cupy-cuda12x; (platform_system=='Linux' or platform_system=='Windows') and (platform_machine=='x86_64' or platform_machine=='AMD64')",
]
cuda11 = [
    "cupy-cuda11x; (platform_system=='Linux' or platform_system=='Windows') and (platform_machine=='x86_64' or platform_machine=='AMD64')",
]
cuda10 = [
    "cupy-cuda10x; platform_system=='Linux' and (platform_machine=='x86_64' or platform_machine=='AMD64')",
]
# 默认CUDA选项（推荐CUDA 12.x）
cuda = [
    "riemann[cuda12]"
]
# 通用cupy选项（适用于macOS、ARM64等不支持CUDA的平台）
cupy = [
    "cupy; platform_system=='Darwin' or platform_machine=='aarch64' or platform_machine=='arm64'"
]
tests = [
    "pytest>=7.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0"
]

[project.urls]
"Documentation (Gitee)" = "https://gitee.com/xfcode2021/Riemann"
"Documentation (GitHub)" = "https://github.com/xiangfei2017/Riemann"
"Source (Gitee)" = "https://gitee.com/xfcode2021/Riemann"
"Source (GitHub)" = "https://github.com/xiangfei2017/Riemann"
"Tracker (Gitee)" = "https://gitee.com/xfcode2021/Riemann/issues"
"Tracker (GitHub)" = "https://github.com/xiangfei2017/Riemann/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["riemann"]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
"*" = ["*.pyi"]
